tests/snapshots/cli_insta_yaml_native__explain.valid-semver.1.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - explain
    - 0.1.2-rc.0.a.1.b+a.0.b.1
---
success: true
exit_code: 0
----- stdout -----
---
major: 0
minor: 1
patch: 2
prerelease_string: rc.0.a.1.b
prerelease:
  - kind: Ascii
    value: rc
  - kind: Numeric
    value: "0"
  - kind: Ascii
    value: a
  - kind: Numeric
    value: "1"
  - kind: Ascii
    value: b
build_metadata_string: a.0.b.1
build-metadata:
  - kind: Ascii
    value: a
  - kind: Numeric
    value: "0"
  - kind: Ascii
    value: b
  - kind: Numeric
    value: "1"
----- stderr -----
