tests/snapshots/cli_insta_yaml_native__explain.valid-semver.3.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - explain
    - 0.1.2-rc.0.a.1.b
---
success: true
exit_code: 0
----- stdout -----
---
major: 0
minor: 1
patch: 2
prerelease_string: rc.0.a.1.b
prerelease:
  - kind: Ascii
    value: rc
  - kind: Numeric
    value: "0"
  - kind: Ascii
    value: a
  - kind: Numeric
    value: "1"
  - kind: Ascii
    value: b
----- stderr -----
