tests/snapshots/cli_insta_yaml_native__explain.valid-semver.4.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - explain
    - 0.1.2+a.0.b.1
---
success: true
exit_code: 0
----- stdout -----
---
major: 0
minor: 1
patch: 2
build_metadata_string: a.0.b.1
build-metadata:
  - kind: Ascii
    value: a
  - kind: Numeric
    value: "0"
  - kind: Ascii
    value: b
  - kind: Numeric
    value: "1"
----- stderr -----
