tests/snapshots/cli_insta_yaml_native__filter.invalid-semver.2.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - filter-test
    - ">1"
    - x.y.z
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'x.y.z' for '<SEMANTIC_VERSION>': unexpected character 'x' while parsing major version number

For more information, try '--help'.
