tests/snapshots/cli_insta_yaml_native__filter.plain.2.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - filter-test
    - ">1"
    - 0.0.1-rc1.br.0+abc
---
success: false
exit_code: 1
----- stdout -----
---
pass: false
----- stderr -----
